[workspace]
members = [
    "crates/xrla-common",
    "crates/xrla-nudb",
    "crates/xrla-export",
    "crates/xrla-import",
]
resolver = "2"

[workspace.dependencies]
anyhow     = "1"
clap       = { version = "4", features = ["derive"] }
hex        = "0.4"
lz4_flex   = "0.11"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
sha2       = "0.10"
thiserror  = "1"
xxhash-rust = { version = "0.8", features = ["xxh64"] }
