[package]
name    = "xrla-export"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "xrla-export"
path = "src/main.rs"

[dependencies]
anyhow      = { workspace = true }
clap        = { workspace = true }
hex         = { workspace = true }
rusqlite    = { version = "0.31", features = ["bundled"] }
xrla-common = { path = "../xrla-common" }
xrla-nudb   = { path = "../xrla-nudb" }
