[package]
name    = "xrla-import"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "xrla-import"
path = "src/main.rs"

[dependencies]
anyhow      = { workspace = true }
clap        = { workspace = true }
hex         = { workspace = true }
xrla-common = { path = "../xrla-common" }
xrla-nudb   = { path = "../xrla-nudb" }
