[package]
name    = "xrla-nudb"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow      = { workspace = true }
hex         = { workspace = true }
lz4_flex    = { workspace = true }
thiserror   = { workspace = true }
xxhash-rust = { workspace = true }
xrla-common = { path = "../xrla-common" }
